# StockCentral

./: .gitignore  README.md  estadisticas.html  index.html  package-lock.json  package.json  pyproject.toml  resumen.html  vite.config.js
assets/: SiteFooter-BMY-adbE.js  SiteFooter-BaMLtoky.js  SiteFooter-Bt3fRfNC.js  SiteFooter-CSHZaPSd.js  SiteFooter-DoWttIat.js  SiteHeader-B6O67-RH.js  SiteHeader-BSiWm9aN.js  SiteHeader-Bx7rkGC6.js  SiteHeader-CCVJ6Ylj.css  SiteHeader-CbSS6XCw.css  SiteHeader-CyDrzOSV.css  SiteHeader-DAwiVw_i.js  SiteHeader-MbUNwunp.css  catalogo-B7LI9Bzs.js  catalogo-BOpxfJdf.js  catalogo-Blg4b2Bt.js  catalogo-CkFyqMI7.js  catalogo-DY87HoMj.js  estadisticas-C8pvihmQ.js  estadisticas-DV-4Ui9_.js  estadisticas-Df3gZq4v.js  estadisticas-hHHvpzPj.js  estadisticas-ldCxXgPz.js  resumen-ANMncuz_.js  resumen-DAVWKyAC.js  resumen-DY__i4Ju.js  resumen-ReHwcEnt.js  resumen-p1pgGw7I.js  shared-CeWxJLhx.css  shared-V3q5Qu21.js
centraldefilamentos/: build_data.py
data/: build_business_log.json  build_technical_log.json  provider_stock_history.json  stock.json
docs/: image-curation.md
public/: app.js  estadisticas.html  estadisticas.js  index.html  resumen.html  resumen.js  styles.css
src/: CatalogApp.svelte  SummaryApp.svelte  VendorStatsApp.svelte  catalog.js  summary.js  vendor-stats.js
stockcentral/: build_data.py  cache_filamentos3d_metadata.py  cache_grilon3_metadata.py  generate_thumbnails.py  models.py  normalize.py  providers.py  thumbnails.py  update_filamentos3d_images.py  update_grilon3_images.py
tests/: test_build_data.py  test_models.py  (+9 more)
(+28 files in other folders)
