[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "stockcentral"
version = "0.1.0"
description = "Centralizador estatico de stock de filamentos 3D para AMBA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "lxml>=5.2.0",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["stockcentral*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
